# graphics-programming-2024

./: CMakeLists.txt
exercises/exercise01/: TerrainApplication.cpp  TerrainApplication.h
exercises/exercise02/: ParticlesApplication.cpp  ParticlesApplication.h
exercises/exercise03/: GearsApplication.cpp  GearsApplication.h
exercises/exercise03/shaders/: basic.vert
exercises/exercise04/: TexturedTerrainApplication.cpp  TexturedTerrainApplication.h
exercises/portal_code/: CMakeLists.txt  ParticlesApplication.cpp  ParticlesApplication.h
exercises/portal_code/shaders/: background.frag  particles.frag  particles.vert  portal.frag  portal.vert
libraries/itugl/include/ituGL/utils/: DearImGui.h
libraries/itugl/src/ituGL/camera/: Camera.cpp
libraries/itugl/src/ituGL/shader/: Shader.cpp  ShaderProgram.cpp
libraries/itugl/src/ituGL/utils/: DearImGui.cpp
